--- a/src/pages/customer-view/customer-view.scss
+++ b/src/pages/customer-view/customer-view.scss
@@ -49,6 +49,11 @@
            .button-container button {
                width: 80%;
            }
+           .take ion-icon,
+           .upload ion-icon,
+           .close ion-icon {
+             color: #757575;
+           }
     
        }
     
